-made responsive util above 768px -fixed the z-index problem but I have to resee the main.js on carusel -the refresh is to slow (the home carusel is seen between refreshes)

--- a/css/botomHeader.css
+++ b/css/botomHeader.css
@@ -1,7 +1,6 @@
 .bottom-header-container{
     padding-top: 30px;
     margin-top: 30px;
-    z-index: -1;
 }
 
 .bottom-image{
