--- a/css/default/reset.css
+++ b/css/default/reset.css
@@ -31,7 +31,6 @@ footer, header, hgroup, menu, nav, section {
 body {
     height: 100vh;
     font-weight: normal;
-    z-index: -1;
 }
 
 ol, ul {
