--- a/css/homeStyle.css
+++ b/css/homeStyle.css
@@ -14,6 +14,7 @@ header{
 
 .top-header{
     background: #ffffff;
+    z-index: 100;
 }
 
 .email{
