--- a/css/topMenu.css
+++ b/css/topMenu.css
@@ -1,5 +1,6 @@
 .menu-nav{
-    border-bottom: 5px solid rgba(124, 124, 125, 0.5)
+    border-bottom: 5px solid rgba(124, 124, 125, 0.5);
+    z-index: 1;
 }
 
 .top-menu-list{
